# StarPlat

./: .editorconfig  .gitignore  ASTHelper.cpp  ASTNode.h  ASTNodeTypes.h  CMakeLists.txt  Changes_list.txt  Context.cpp  FrontendContext.h  MAP_cuda (1).cu  MAP_openMP.c  MainContext.cpp  MainContext.h  README.md  Symbol.cpp  Symbol.h  SymbolTable.cpp  SymbolTable.h  TACode.h  To_be_done.txt  bc  comparison.py  deleteopenmp.cpp  dijkstra_openmp.cpp  dsl_lex.l  dsl_lex_for_yacc.l  dsl_yacc.y  dsl_yacc_modified.y  errorlog1.err  input1.txt  kelementopenmp.cpp  lex.yy.c  license.txt  main  outputBC.txt  outputBC1.txt  outputI.txt  run.sh  run1.sh  sssp  (+1 more)
graphcode/: APFB_V1  (+64 more)
src/analyser/: ASTAnalyser.cpp  ASTAnalyser.h  ASTAnalyser1.cpp  ASTAnalyser1.h  CMakeLists.txt  Grammar  PRAnalyser.cpp  PRAnalyser.h  analyserUtil.cpp  analyserUtil.h  analyserUtil.hpp  attachPropAnalyser.cpp  attachPropAnalyser.h  dataRaceAnalyser.cpp  dataRaceAnalyser.h  deviceVarsAnalyser.cpp  deviceVarsAnalyser.h  deviceVarsInit.cpp  getUsedVars.cpp  pushPullAnalyser.cpp  pushPullAnalyser.h  temp.cpp  temp.py
src/analyser/ForLoopFusion/: ForLoopFusionAnalyser.cpp  ForLoopFusionAnalyser.h
src/analyser/ForLoopPropInit/: ForLoopPropInitAnalyser.cpp  ForLoopPropInitAnalyser.h
src/analyser/PRAnalyser/: PRAnalyser.cpp  PRAnalyser.h
src/analyser/RMAAnalyzer/: delayedComms.cc  delayedComms.h
src/analyser/attachProp/: CMakeLists.txt  attachPropAnalyser.cpp  attachPropAnalyser.h
src/analyser/blockVars/: NodeBlockData.cpp  analyserUtil.cpp  analyserUtil.h  blockVarsAnalyser.cpp  blockVarsAnalyser.h  blockVarsInit.cpp  getUsedVars.cpp  (+1 more)
src/ast/: ASTHelper.cpp  ASTNode.h  ASTNode.hpp  ASTNodeTypes.h  ASTNodeTypes.hpp  CMakeLists.txt  MetaDataUsed.hpp
src/parser/: CMakeLists.txt  Makefile  dsl_lex_for_yacc.l  dsl_yacc_modified.tab.c  dsl_yacc_modified.y  includeHeader.hpp  lex.yy.c  lexer.l  lrparser.y  okay.y  skeletal_parser.y  y.gv  y.output  y.tab.c  y.tab.h
(+1798 files in other folders)
